WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302146
REGRESSION(
302691@main
): Trigger asserts in 11 Debug API tests
https://bugs.webkit.org/show_bug.cgi?id=302146
Summary
REGRESSION(302691@main): Trigger asserts in 11 Debug API tests
Jonathan Bedard
Reported
2025-11-06 22:46:38 PST
History (from a single test):
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.PasteWebArchive.WebArchiveTypeIdentifier
Build:
https://build.webkit.org/#/builders/1226/builds/2668
Impacted tests: TestWebKitAPI.DragAndDropTests.ModernWebArchiveType TestWebKitAPI.PasteMixedContent.ImageFileAndWebArchive TestWebKitAPI.PasteWebArchive.DestinationUsesDarkMode TestWebKitAPI.PasteWebArchive.ExposesHTMLTypeInDataTransfer TestWebKitAPI.PasteWebArchive.PreservesMSOList TestWebKitAPI.PasteWebArchive.PreservesMSOListInCompatibilityMode TestWebKitAPI.PasteWebArchive.PreservesPictureInsideSpan TestWebKitAPI.PasteWebArchive.SanitizesHTML TestWebKitAPI.PasteWebArchive.StripsDataDetectorsLinks TestWebKitAPI.PasteWebArchive.StripsMSOListWhenMissingMSOHTMLElement TestWebKitAPI.PasteWebArchive.WebArchiveTypeIdentifier Log: ASSERTION FAILED: coreArchive /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebKitLegacy/mac/WebView/WebArchive.mm(101) : -[WebArchivePrivate setCoreArchive:] 1 0x11289cdb8 -[WebArchivePrivate setCoreArchive:] 2 0x11289d5e0 -[WebArchive initWithMainResource:subresources:subframeArchives:] 3 0x102baa0d8 PasteWebArchive_StripsMSOListWhenMissingMSOHTMLElement_Test::TestBody() 4 0x1036a1c50 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 5 0x10365aa00 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 6 0x10365a950 testing::Test::Run() 7 0x10365b880 testing::TestInfo::Run() 8 0x10365ca14 testing::TestSuite::Run() 9 0x10366a820 testing::internal::UnitTestImpl::RunAllTests() 10 0x1036a6984 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 11 0x10366a218 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 12 0x10366a110 testing::UnitTest::Run() 13 0x1027d26e0 RUN_ALL_TESTS() 14 0x1027d2678 TestWebKitAPI::TestsController::run(int, char**) 15 0x103642d2c main 16 0x194802b98 start worker/0 TestWebKitAPI.PasteWebArchive.StripsMSOListWhenMissingMSOHTMLElement Crashed 2025-11-06 20:37:14.116 TestWebKitAPI[23781:664018] NSEventConcurrentProcessingEnabled=NO ASSERTION FAILED: coreArchive /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebKitLegacy/mac/WebView/WebArchive.mm(101) : -[WebArchivePrivate setCoreArchive:] 1 0x113574db8 -[WebArchivePrivate setCoreArchive:] 2 0x1135755e0 -[WebArchive initWithMainResource:subresources:subframeArchives:] 3 0x103784190 PasteWebArchive_WebArchiveTypeIdentifier_Test::TestBody() 4 0x104279c50 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 5 0x104232a00 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 6 0x104232950 testing::Test::Run() 7 0x104233880 testing::TestInfo::Run() 8 0x104234a14 testing::TestSuite::Run() 9 0x104242820 testing::internal::UnitTestImpl::RunAllTests() 10 0x10427e984 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 11 0x104242218 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 12 0x104242110 testing::UnitTest::Run() 13 0x1033aa6e0 RUN_ALL_TESTS() 14 0x1033aa678 TestWebKitAPI::TestsController::run(int, char**) 15 0x10421ad2c main 16 0x194802b98 start worker/0 TestWebKitAPI.PasteWebArchive.WebArchiveTypeIdentifier Crashed
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-06 22:46:48 PST
<
rdar://problem/164231864
>
Sihui Liu
Comment 2
2025-11-07 09:36:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53594
EWS
Comment 3
2025-11-07 10:27:40 PST
Committed
302732@main
(45bd7d4d3555): <
https://commits.webkit.org/302732@main
> Reviewed commits have been landed. Closing PR #53594 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug