REGRESSION(302691@main): Trigger asserts in 11 Debug API tests https://bugs.webkit.org/show_bug.cgi?id=302146 rdar://164231864

Reviewed by Jonathan Bedard.

302691@main makes it impossible to create a LegacyWebArchive with null main resource, so WebArchivePrivate will hold
a null coreArchive instead of a empty coreArchive. Removing a stale debug assertion in WebArchivePrivate that asserts
coreArchive cannot be null.

* Source/WebKitLegacy/mac/WebView/WebArchive.mm:
(-[WebArchivePrivate setCoreArchive:]):

Canonical link: https://commits.webkit.org/302732@main